@@ -46,9 +46,6 @@ desktop_in_files =							\
 desktop_DATA =								\
 	$(desktop_in_files:.desktop.in=.desktop)
 
-settingsdir = $(datadir)/xfce4/settings-dialogs
-settings_DATA = $(desktop_DATA)
-
 @INTLTOOL_DESKTOP_RULE@
 
 CLEANFILES =								\
