@@ -3,10 +3,10 @@ Type=Application
 Encoding=UTF-8
 _Name=Xfce 4 Panel Manager
 _GenericName=Panel Manager
+_X-XfceSettingsName=Panel
 _Comment=Customize Panel
 Exec=xfce4-panel -c
 Icon=xfce4-panel
 Terminal=false
-Categories=X-XFCE;Settings;DesktopSettings;
+Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
-
