@@ -1,3 +1,7 @@
+2008-08-25 06:20 kelnos
+
+    * Include panel settings in new settings manager dialog
+
 2008-08-01 00:00 nick
 
     * Fix a bunch of compiler warnings.
